# Copyright 2021 Proyectos y Sistemas de Mantenimiento SL (eProsima).
#
# This file is part of eProsima Fast DDS Monitor.
#
# eProsima Fast DDS Monitor is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# eProsima Fast DDS Monitor is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with eProsima Fast DDS Monitor. If not, see <https://www.gnu.org/licenses/>.

cmake_minimum_required(VERSION 3.5)

###############################################################################
# Default shared libraries
###############################################################################
# Global flag to cause add_library() to create shared libraries if on.
# If set to true, this will cause all libraries to be built shared
# unless the library was explicitly added as a static library.
option(BUILD_SHARED_LIBS "Create shared libraries by default" ON)

find_package(fastcdr REQUIRED)
find_package(fastdds REQUIRED)
find_package(fastdds_statistics_backend REQUIRED)

###############################################################################
# Compile MOCKs
###############################################################################
if(COMPLEX_MOCK OR BUILD_MOCK)
    add_subdirectory(complex_mock)
endif()

if(STATIC_MOCK OR BUILD_MOCK)
    add_subdirectory(static_mock)
endif()

